design-principles-02/src/main/java/com/farhad/example/design_principles02/dessert/bad/dessert/Dessert.java
package com.farhad.example.design_principles02.dessert.bad.dessert;

public interface Dessert {
	public void serve();
}
